# comfy_webapp_core

./: README.md  pyproject.toml
comfyui_webapp_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
webapp_core/: __init__.py  interfaces.py  models.py  node_mapper.py  user_directory.py
